:recycle: [Refactor]: Recreation 검증 추가 및 Recreation과 CustomRecreation 해쉬맵으로 전달